defense_bachelor/code/output1.txt
error[E0502]: cannot borrow `v` as mutable because it is
also borrowed as immutable
 --> src/main.rs:5:5
  |
5 |     let x = &v[0];
  |              - immutable borrow occurs here
8 |     v.push("world");
  |     ^^^^^^^^^^^^^^^ mutable borrow occurs here
9 |     println!("{}", x);
  |                    - immutable borrow later used here
